--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,8 @@ buildscript {
 
         koin_version = '1.0.1'
 
+        commons_lang_version = '3.8.1'
+
         kotlin_logging_version = '1.6.10'
         logback_version = '1.2.1'
     }
@@ -64,6 +66,9 @@ dependencies {
     compile "org.koin:koin-logger-slf4j:$koin_version"
 
     compile "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:$jackson_version"
+
+    compile "org.apache.commons:commons-lang3:$commons_lang_version"
+
 
     compile "io.github.microutils:kotlin-logging:$kotlin_logging_version"
     compile "ch.qos.logback:logback-classic:$logback_version"
