Add machine configuration

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -9,3 +9,25 @@ ktor {
         ]
     }
 }
+
+jetpackr {
+    machine {
+        name = ubuntu
+        label = Ubuntu
+        description = "Ubuntu is an open source software platform that runs from the cloud, to the smartphone, to all your things."
+
+        box {name = box, label = Box}
+        memory {name = memory, label = Memory (MB), value = 4096}
+        timezone {name = timezone, label = Timezone}
+
+        synchronization {
+            name = synchronization
+            labe = Synchronization
+            options = [
+                {label = None, value = none},
+                {label = Guard, value = guard},
+                {label = Rsync, value = rsync}
+            ]
+        }
+    }
+}
