--- a/src/main/resources/jetpackr/containers.yml
+++ b/src/main/resources/jetpackr/containers.yml
@@ -1,7 +1,6 @@
 ###############
 # Data Stores #
 ###############
-
 mysql:
   name: mysql
   label: MySQL
@@ -26,7 +25,6 @@ mysql:
       - { name: MYSQL_DATABASE, label: Database, value: my_database }
       - { name: MYSQL_USER, label: User, value: my_user }
       - { name: MYSQL_PASSWORD, label: Password, value: my_password }
-
 mariadb:
   name: mariadb
   label: MariaDB
@@ -51,7 +49,6 @@ mariadb:
       - { name: MYSQL_DATABASE, label: Database, value: my_database }
       - { name: MYSQL_USER, label: User, value: my_user }
       - { name: MYSQL_PASSWORD, label: Password, value: my_password }
-
 postgres:
   name: postgres
   label: PostgreSQL
@@ -76,7 +73,6 @@ postgres:
       - { name: POSTGRES_DB, label: Database, value: my_database }
       - { name: POSTGRES_USER, label: User, value: my_user }
       - { name: POSTGRES_PASSWORD, label: Password, value: my_password }
-
 mongo:
   name: mongo
   label: MongoDB
@@ -94,7 +90,6 @@ mongo:
   ports:
     - host: 27017
       container: 27017
-
 redis:
   name: redis
   label: Redis
@@ -142,7 +137,6 @@ rabbitmq:
       - { name: RABBITMQ_DEFAULT_PASS, label: Password, value: my_password }
       - { name: RABBITMQ_NODE_NAME, label: Node Name, value: my_node@rabbitmq }
       - { name: RABBITMQ_ERLANG_COOKIE, label: Erlang Cookie, value: my_erlang_cookie }
-
 eclipse-mosquitto:
   name: eclipse-mosquitto
   label: Eclipse Mosquitto
@@ -165,8 +159,9 @@ eclipse-mosquitto:
     - host: 9001
       container: 9001
 
-# Search Engines
-
+##################
+# Search Engines #
+##################
 elasticsearch:
   name: elasticsearch
   label: ElasticSearch
@@ -188,7 +183,6 @@ elasticsearch:
   ports:
     - host: 9200
       container: 9200
-
 solr:
   name: solr
   label: Solr
