--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ buildscript {
         koin_version = '1.0.1'
 
         commons_lang_version = '3.8.1'
+        commons_io_version = '2.6'
         maven_artifact_version = '3.3.9'
 
         kotlin_logging_version = '1.6.10'
@@ -79,6 +80,7 @@ dependencies {
     compile "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:$jackson_version"
 
     compile "org.apache.commons:commons-lang3:$commons_lang_version"
+    compile "commons-io:commons-io:$commons_io_version"
     compile "org.apache.maven:maven-artifact:$maven_artifact_version"
 
     compile "io.github.microutils:kotlin-logging:$kotlin_logging_version"
