--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,10 @@ buildscript {
 
         kotlin_logging_version = '1.6.10'
         logback_version = '1.2.1'
+
+        kotlin_test_version = '3.1.10'
+        kluent_version = '1.42'
+        mockk_version = '1.8.12.kotlin13'
     }
 
     repositories {
@@ -58,6 +62,10 @@ repositories {
     maven { url 'https://kotlin.bintray.com/kotlinx' }
 }
 
+test {
+    useJUnitPlatform()
+}
+
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 
@@ -86,9 +94,12 @@ dependencies {
     compile "io.github.microutils:kotlin-logging:$kotlin_logging_version"
     compile "ch.qos.logback:logback-classic:$logback_version"
 
+    // Testing
     testCompile "io.ktor:ktor-server-tests:$ktor_version"
     testCompile "io.ktor:ktor-client-mock:$ktor_version"
-
-    // Testing
     testCompile 'org.koin:koin-test:1.0.1'
+
+    testCompile "io.kotlintest:kotlintest-runner-junit5:$kotlin_test_version"
+    testImplementation "org.amshove.kluent:kluent:$kluent_version"
+    testImplementation "io.mockk:mockk:$mockk_version"
 }
