--- a/build.gradle
+++ b/build.gradle
@@ -100,7 +100,10 @@ dependencies {
 
     // Testing
     testCompile "io.ktor:ktor-server-tests:$ktor_version"
+    testCompile "io.ktor:ktor-server-test-host:$ktor_version"
+    testCompile "io.ktor:ktor-client-tests:$ktor_version"
     testCompile "io.ktor:ktor-client-mock:$ktor_version"
+
     testCompile 'org.koin:koin-test:1.0.1'
 
     testCompile "io.kotlintest:kotlintest-runner-junit5:$kotlin_test_version"
