--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,11 @@
 buildscript {
     ext {
-        kotlin_version = '1.3.0'
+        kotlin_version = '1.3.10'
 
-        ktor_version = '1.0.0-beta-3'
+        ktor_version = '1.0.0-beta-4'
         jackson_version = '2.9.7'
 
-        koin_version = '1.0.1'
+        koin_version = '1.0.2'
 
         caffeine_version = '2.6.2'
 
@@ -22,9 +22,9 @@ buildscript {
     }
 
     repositories {
-        mavenLocal()
-        mavenCentral()
         jcenter()
+        mavenCentral()
+        mavenLocal()
     }
     
     dependencies {
@@ -102,7 +102,7 @@ dependencies {
     testCompile "io.ktor:ktor-server-tests:$ktor_version"
     testCompile "io.ktor:ktor-server-test-host:$ktor_version"
     testCompile "io.ktor:ktor-client-tests:$ktor_version"
-    testCompile "io.ktor:ktor-client-mock:$ktor_version"
+    testCompile "io.ktor:ktor-client-mock:1.0.0-beta-3"
 
     testCompile 'org.koin:koin-test:1.0.1'
 
