--- a/src/main/resources/jetpackr/containers.yml
+++ b/src/main/resources/jetpackr/containers.yml
@@ -4,12 +4,12 @@ containers:
     name: mysql
     label: MySQL
     description: MySQL is the most popular Open Source SQL database management system.
-    type: DataStore
+    category: DataStore
     version:
       name: version
       label: Version
       source:
-        type: DockerHub
+        remote: DockerHub
         url: https://registry.hub.docker.com/v2/repositories/library/mysql/tags
     install: { name: install, label: Install MySQL }
     volumes:
@@ -28,12 +28,12 @@ containers:
     name: mariadb
     label: MariaDB
     description: MariaDB is an enhanced, drop-in replacement for MySQL.
-    type: DataStore
+    category: DataStore
     version:
       name: version
       label: Version
       source:
-        type: DockerHub
+        remote: DockerHub
         url: https://registry.hub.docker.com/v2/repositories/library/mariadb/tags
     install: { name: install, label: Install MariaDB }
     volumes:
@@ -52,12 +52,12 @@ containers:
     name: postgres
     label: PostgreSQL
     description: PostgreSQL is a powerful, open source object-relational database system.
-    type: DataStore
+    category: DataStore
     version:
       name: version
       label: Version
       source:
-        type: DockerHub
+        remote: DockerHub
         url: https://registry.hub.docker.com/v2/repositories/library/postgres/tags
     install: { name: install, label: Install PostgreSQL }
     volumes:
@@ -76,12 +76,12 @@ containers:
     name: mongo
     label: MongoDB
     description: MongoDB is an open-source, document database designed for ease of development and scaling.
-    type: DataStore
+    category: DataStore
     version:
       name: version
       label: Version
       source:
-        type: DockerHub
+        remote: DockerHub
         url: https://registry.hub.docker.com/v2/repositories/library/mongo/tags
     install: { name: install, label: Install MongoDB }
     volumes:
@@ -93,12 +93,12 @@ containers:
     name: redis
     label: Redis
     description: Redis is an open source (BSD licensed), in-memory data structure store, used as database, cache and message broker.
-    type: DataStore
+    category: DataStore
     version:
       name: version
       label: Version
       source:
-        type: DockerHub
+        remote: DockerHub
         url: https://registry.hub.docker.com/v2/repositories/library/redis/tags
     install: { name: install, label: Install Redis }
     command: redis-server --appendonly yes
@@ -113,12 +113,12 @@ containers:
     name: rabbitmq
     label: RabbitMQ
     description: RabbitMQ is a lightweight, reliable, scalable and portable message broker.
-    type: MessageBroker
+    category: MessageBroker
     version:
       name: version
       label: Version
       source:
-        type: DockerHub
+        remote: DockerHub
         url: https://registry.hub.docker.com/v2/repositories/library/rabbitmq/tags
     install: { name: install, label: Install RabbitMQ }
     volumes:
@@ -137,12 +137,12 @@ containers:
     name: eclipse-mosquitto
     label: Eclipse Mosquitto
     description: Eclipse Mosquitto is an open source message broker which implements MQTT version 3.1 and 3.1.1
-    type: MessageBroker
+    category: MessageBroker
     version:
       name: version
       label: Version
       source:
-        type: DockerHub
+        remote: DockerHub
         url: https://registry.hub.docker.com/v2/repositories/library/eclipse-mosquitto/tags
     install: { name: install, label: Install RabbitMQ }
     volumes:
@@ -159,15 +159,15 @@ containers:
     name: elasticsearch
     label: ElasticSearch
     description: Elasticsearch is a distributed, open source search and analytics engine, designed for horizontal scalability, reliability, and easy management.
-    type: SearchEngine
+    category: SearchEngine
     # To be switched to https://api.github.com/repos/elastic/elasticsearch-docker/branches
     # docker_url = docker.elastic.co/elasticsearch
-    # consider using repository { type: DockerHub, url: http://docker.com/etc }
+    # consider using repository { remote: DockerHub, url: http://docker.com/etc }
     version:
       name: version
       label: Version
       source:
-        type: DockerHub
+        remote: DockerHub
         url: https://registry.hub.docker.com/v2/repositories/library/elasticsearch/tags
     install: { name: install, label: Install ElasticSearch }
     volumes:
@@ -180,12 +180,12 @@ containers:
     name: solr
     label: Solr
     description: Solr is the popular, blazing-fast, open source enterprise search platform built on Apache Lucene.
-    type: SearchEngine
+    category: SearchEngine
     version:
       name: version
       label: Version
       source:
-        type: DockerHub
+        remote: DockerHub
         url: https://registry.hub.docker.com/v2/repositories/library/solr/tags
     install: { name: install, label: Install Solr }
     volumes:
