--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ buildscript {
     ext {
         kotlin_version = '1.3.10'
 
-        ktor_version = '1.0.0-beta-4'
+        ktor_version = '1.0.0'
         jackson_version = '2.9.7'
 
         koin_version = '1.0.2'
