--- a/build.gradle
+++ b/build.gradle
@@ -1,20 +1,33 @@
 buildscript {
     ext {
-        kotlin_version = '1.3.0'
+        kotlin_version = '1.3.10'
 
-        ktor_version = '1.0.0-beta-3'
-        jackson_version = '2.9.2'
+        ktor_version = '1.0.0'
+        jackson_version = '2.9.7'
 
-        koin_version = '1.0.1'
+        koin_version = '1.0.2'
+
+        caffeine_version = '2.6.2'
+
+        commons_lang_version = '3.8.1'
+        commons_io_version = '2.6'
+        maven_artifact_version = '3.3.9'
+
+        time4j_version = '5.0'
+        tzdata_version = "2018g"
 
         kotlin_logging_version = '1.6.10'
         logback_version = '1.2.1'
+
+        kotlin_test_version = '3.1.10'
+        kluent_version = '1.42'
+        mockk_version = '1.8.12.kotlin13'
     }
 
     repositories {
-        mavenLocal()
-        mavenCentral()
         jcenter()
+        mavenCentral()
+        mavenLocal()
     }
     
     dependencies {
@@ -51,6 +64,11 @@ repositories {
     mavenCentral()
     jcenter()
     maven { url 'https://kotlin.bintray.com/ktor' }
+    maven { url 'https://kotlin.bintray.com/kotlinx' }
+}
+
+test {
+    useJUnitPlatform()
 }
 
 dependencies {
@@ -60,16 +78,42 @@ dependencies {
     compile "io.ktor:ktor-server-netty:$ktor_version"
     compile "io.ktor:ktor-jackson:$ktor_version"
 
+    compile "io.ktor:ktor-client-core:$ktor_version"
+    compile "io.ktor:ktor-client-core-jvm:$ktor_version"
+    compile "io.ktor:ktor-client-apache:$ktor_version"
+    compile "io.ktor:ktor-client-json-jvm:$ktor_version"
+    compile "io.ktor:ktor-client-jackson:$ktor_version"
+
+    compile "com.fasterxml.jackson.core:jackson-databind:$jackson_version"
+    compile "com.fasterxml.jackson.module:jackson-module-kotlin:$jackson_version"
+    compile "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:$jackson_version"
+    compile "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:$jackson_version"
+
     compile "org.koin:koin-ktor:$koin_version"
     compile "org.koin:koin-logger-slf4j:$koin_version"
 
-    compile "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:$jackson_version"
+    compile "com.github.ben-manes.caffeine:caffeine:$caffeine_version"
+
+    compile "org.apache.commons:commons-lang3:$commons_lang_version"
+    compile "commons-io:commons-io:$commons_io_version"
+    compile "org.apache.maven:maven-artifact:$maven_artifact_version"
+
+
+    compile "net.time4j:time4j-base:$time4j_version"
+    compile "net.time4j:time4j-tzdata:$time4j_version-$tzdata_version"
 
     compile "io.github.microutils:kotlin-logging:$kotlin_logging_version"
     compile "ch.qos.logback:logback-classic:$logback_version"
 
-    testCompile "io.ktor:ktor-server-tests:$ktor_version"
-
     // Testing
-    testCompile 'org.koin:koin-test:1.0.1'
+    testCompile "io.ktor:ktor-server-tests:$ktor_version"
+    testCompile "io.ktor:ktor-server-test-host:$ktor_version"
+    testCompile "io.ktor:ktor-client-tests:$ktor_version"
+    testCompile "io.ktor:ktor-client-mock-jvm:$ktor_version"
+
+    testCompile "org.koin:koin-test:$koin_version"
+
+    testCompile "io.kotlintest:kotlintest-runner-junit5:$kotlin_test_version"
+    testImplementation "org.amshove.kluent:kluent:$kluent_version"
+    testImplementation "io.mockk:mockk:$mockk_version"
 }
